--- a/last_color_black.ui
+++ b/last_color_black.ui
@@ -1514,8 +1514,18 @@ background-color: rgb(255, 255, 255);</string>
     <property name="title">
      <string>设置</string>
     </property>
+    <widget class="QMenu" name="menu_6">
+     <property name="title">
+      <string>主题</string>
+     </property>
+     <addaction name="action_20"/>
+     <addaction name="action_21"/>
+     <addaction name="action_22"/>
+     <addaction name="action_23"/>
+    </widget>
     <addaction name="action_15"/>
     <addaction name="action_16"/>
+    <addaction name="menu_6"/>
    </widget>
    <widget class="QMenu" name="menu_5">
     <property name="title">
@@ -1597,6 +1607,9 @@ color: rgb(255, 255, 255);
          </property>
          <property name="styleSheet">
           <string notr="true">background-color: rgb(255, 255, 255);border-radius:3px;</string>
+         </property>
+         <property name="text">
+          <string/>
          </property>
         </widget>
        </item>
@@ -2302,6 +2315,26 @@ p, li { white-space: pre-wrap; }
   <action name="action_4">
    <property name="text">
     <string>管理模型</string>
+   </property>
+  </action>
+  <action name="action_20">
+   <property name="text">
+    <string>蓝色主题</string>
+   </property>
+  </action>
+  <action name="action_21">
+   <property name="text">
+    <string>暗色主题</string>
+   </property>
+  </action>
+  <action name="action_22">
+   <property name="text">
+    <string>亮色主题</string>
+   </property>
+  </action>
+  <action name="action_23">
+   <property name="text">
+    <string>紫色主题</string>
    </property>
   </action>
  </widget>
